# AggreGator

./: .devcontainer.json  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json
apps/cli/: pyproject.toml
apps/cli/src/aggregator/: init_db.py  populate_market_data.py
apps/cli/src/aggregator/subcommands/: db.py  market.py
apps/cli/src/aggregator/subcommands/helpers/: init_db.py  populate_market_data.py
apps/dbinit/: pyproject.toml
apps/dbinit/src/aggregator/dbinit/: __main__.py
apps/market/: pyproject.toml
apps/market/src/aggregator/market/: __main__.py
exe/: aggregator
libs/db/: pyproject.toml
libs/db/src/aggregator/db/engine/: engine_utils.py  utils.py
libs/db/src/aggregator/db/models/: cash.py  lots.py  market.py  trades.py
libs/db/tests/aggregator/db/engine/: test_engine_utils.py
scripts/: aggregator.sh  list-inits.sh  purge.sh  rm-pycache.sh  test.sh
src/aggregator/: README.md
src/apps/cli/src/aggregator/: cli.py
src/libs/db/: pyproject.toml
src/libs/db/src/aggregator/db/models/: asset_type.py  cash.py
viz/: aggregator-dashboard.json
