[tool.poetry]
name = "cli"
version = "0.0.0"
description = "AggreGator CLI"
authors = ["SupaStuff <Stuff_Git_NaoResposta@outlook.com>"]
license = "MIT"
packages = [
  { include = "aggregator", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10.5,<3.11"
click = "^8.1.3"
psycopg2-binary = "^2.9.2"
requests = "^2.28.1"
SQLAlchemy = "^1.4.28"
SQLAlchemy-Utils = "^0.37.9"
db = { path = "../../libs/db/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
