[tool.poetry]
name = "db"
version = "0.0.0"
description = "AggreGator data models and SQLAlchemy engine"
authors = ["SupaStuff <Stuff_Git_NaoResposta@outlook.com>"]
license = "MIT"
packages = [
  { include = "aggregator", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10.5,<3.11"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
